--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Stock Quotes!</title>
+    <title>Dow 30 Company Listings + More</title>
     <link rel='stylesheet' href='renderer.css'>
   </head>
   <body>
-    <h1>Concise Stock Quotes!</h1>
+    <h1>Dow 30 & More</h1>
     <nav>
       <p><a href='index.html' target='_self'>Refresh</a></p>
     </nav>
